# relation

./: LICENSE  relation.cabal
.circleci/: config.yml
src/Data/: Relation.hs
src/Data/Relation/: Internal.hs  Ops.hs
src/Data/Relation/Internal/: Set.hs
test/Data/: RelationSpec.hs
test/Data/Relation/: Gen.hs
tests/: doctest-examples.hs
