name:               relation
version:            0.3
synopsis:           A data structure representing Relations on Sets.
description:        A library to model relationships between two objects that are subclasses of
                    Ord.

                    We use a two Maps that allows fast searching either by the key element or
                    the value element.
homepage:           https://www.github.com/haskell-works/relation/
bug-reports:        https://www.github.com/haskell-works/relation/issues
license:            BSD3
license-file:       LICENSE
author:             Leonel Fonseca
maintainer:         John Ky
copyright:          (C) 2019 John Ky,
                    (C) 2012 Drew Day,
                    (C) 2010 Leonel Fonseca
category:           Data Structures
stability:          Experimental
build-type:         Simple
cabal-version:	    >= 1.8
tested-with:        GHC==7.4
extra-source-files: LICENSE
                    README.md

library
  hs-source-dirs:   src
  exposed-modules:  Data.Relation
  build-depends:    base           >= 4.2    && < 6.0
                  , containers     >= 0.5    && < 0.7

source-repository head
  type:     git
  location: https://www.github.com/haskell-works/relation
